# AudioFX-EQ

./: .gitignore  CMakeLists.txt  EQ.jucer  README.md
.github/workflows/: cpp-linter.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/EQ.xcodeproj/: project.pbxproj
Builds/MacOSX/EQ.xcodeproj/project.xcworkspace/xcuserdata/s20113452.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/EQ.xcodeproj/xcshareddata/xcschemes/: EQ - AU.xcscheme  EQ - All.xcscheme  EQ - Shared Code.xcscheme  EQ - Standalone Plugin.xcscheme  EQ - VST3 Manifest Helper.xcscheme  EQ - VST3.xcscheme
Builds/MacOSX/EQ.xcodeproj/xcuserdata/s20113452.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/MacOSX/EQProject.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/00/: ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/01/: ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/02/: ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/03/: ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/04/: ProjectData
Builds/MacOSX/EQProject.logicx/Alternatives/000/Project File Backups/05/: ProjectData
Builds/MacOSX/EQProject.logicx/Resources/: ProjectInformation.plist
Builds/VisualStudio2022/: EQ.sln  EQ_SharedCode.vcxproj  EQ_SharedCode.vcxproj.filters  EQ_StandalonePlugin.vcxproj  EQ_StandalonePlugin.vcxproj.filters  EQ_VST3.vcxproj  EQ_VST3.vcxproj.filters  EQ_VST3ManifestHelper.vcxproj  resources.rc
Demonstration/: DemonstrationScript.ipynb
Demonstration/PythonCode/: AllPassBand.py  FilterBand.py  HighCutBand.py  HighShelfBand.py  LowCutBand.py  LowShelfBand.py  NotchBand.py  ParametricEQ.py  PeakingBand.py  TDF_II_Biquad.py  mag2db.py  plotting.py
Demonstration/matlab/: AllPassBand.m  DemonstrationScript.mlx  FilterBand.m  HighCutBand.m  HighShelfBand.m  LowCutBand.m  LowShelfBand.m  NotchBand.m  ParametricEQ.m  PeakingBand.m  PlotIIREQPhaseResponse.m  PlotIIREQPoleZero.m  PlotIIREQResponse.m  PlotIIREQStepResponse.m  TDF_II_Biquad.m
Matlab/: AllPassBand.m  DemonstrationScript.mlx  FilterBand.m  HighCutBand.m  HighShelfBand.m  LowCutBand.m  LowShelfBand.m  NotchBand.m  ParametricEQ.m  PeakingBand.m  PlotIIREQPhaseResponse.m  PlotIIREQPoleZero.m  PlotIIREQResponse.m  PlotIIREQStepResponse.m  TDF_II_Biquad.m
Source/: AbstractBand.cpp  AbstractBand.h  AbstractFilterBand.cpp  AbstractFilterBand.h  AnalyserPath.cpp  AnalyserPath.h  AnalyserPathGenerator.cpp  AnalyserPathGenerator.h  CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CutBandParameters.cpp  CutBandParameters.h  EQProcessor.cpp  EQProcessor.h  FFTDataGenerator.h  FFTProcessor.cpp  FFTProcessor.h  FIFO.cpp  FIFO.h  Graph.cpp  Graph.h  GraphBackground.cpp  GraphBackground.h  HighCutBand.cpp  HighCutBand.h  HighShelfBand.cpp  HighShelfBand.h  LabelledButton.cpp  LabelledButton.h  LabelledChoiceSlider.cpp  LabelledChoiceSlider.h  LabelledSlider.cpp  LabelledSlider.h  LowCutBand.cpp  LowCutBand.h  LowShelfBand.cpp  LowShelfBand.h  PeakBand.cpp  PeakBand.h  (+13 more)
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
plugin/source/GUI/Components/: LabelledChoiceSlider.cpp  LabelledChoiceSlider.h
plugin/source/GUI/EQComponents/: CutBandParameters.h  PeakBandParameters.h
plugin/source/Processing/: FFTProcessor.cpp
